<resources>
    <string name="app_name">My Calculadora 2</string>
    <string name="lblNum1">Número 1:</string>
    <string name="lblNum2">Número 2:</string>
    <string name="lblRes">Resultado:</string>
    <string name="rbSuma">Suma</string>
    <string name="rbResta">Resta</string>
    <string name="rbDiv">División</string>
    <string name="rbMul">Multiplicación</string>
    <string name="btnCalcular">Calcular</string>
</resources>
